--- a/templates/main.html
+++ b/templates/main.html
@@ -1,1 +1,28 @@
 
+<!DOCTYPE html>
+<html>
+  <main>
+    <head>
+     <title> Job Chooser </title>
+    </head>
+    <body>
+      <h1> List of Jobs </h1>
+      <br>
+      <table align = "center" border ="1">
+	<tr><td>Job</td><td>Percentage</td></tr> 
+	{% for job in occDict  %}
+	<tr>
+	  <td>
+	    {{ job }}
+	  </td>
+	  <td>
+	    {{ occDict[job] }}
+	  </td>
+	</tr>
+	{% endfor %}
+      </table>
+      <br>
+      <p><b>You Random Job is: </b>
+      {{ RandJob }}      </p>
+    </body>
+</html>
